# wally

./: Cargo.toml
migrations/: 20241230152436_create_wallpaper_table.sql
scripts/: init_db.sh
src/: api.rs  cli.rs  config.rs  db.rs  lib.rs  main.rs  model.rs
