[package]
name = "wally"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "wally"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
reqwest = { version = "0.12.11", features = ["json"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "macros"] }
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.4"
